new bootstrap work

--- a/Bootstrap/2_bt_containers.html
+++ b/Bootstrap/2_bt_containers.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href=".bootstrap-reboot.css">
 </head>
 <body>
-    <h1> my bootstrap test</h1>
-    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, consectetur consequuntur officia tenetur corrupti commodi dolorem ratione, quis vitae aliquam, itaque atque numquam ut recusandae tempora fugit quibusdam aut nesciunt.</p>
+    <div class="container">
+<h1> div 1</h1>
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non architecto pariatur reprehenderit sunt provident excepturi ut nisi consectetur molestias aut debitis nostrum odio in, modi nulla dolorum, doloremque quidem ducimus.
+    </div>
+
+    <div class="container-fluid">
+        <h1> div 2</h1>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non architecto pariatur reprehenderit sunt provident excepturi ut nisi consectetur molestias aut debitis nostrum odio in, modi nulla dolorum, doloremque quidem ducimus.
+            </div>   
+    
 </body>
 </html>
